--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
+    "shortid": "^2.2.15",
     "styled-components": "^5.0.1"
   },
   "scripts": {
